--- a/style.css
+++ b/style.css
@@ -10,3 +10,13 @@ body, html{
     width: 100%;
     height: 100%;
 }
+
+#center{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    height: 200px;
+    border: 1px solid black;
+}
